<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <PreferenceCategory app:title="@string/messages_header">-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="false"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/auto_pause">

        <SwitchPreferenceCompat
            app:key="set pause"
            app:title="@string/set_pause" />

        <SwitchPreferenceCompat
            app:key="timer pause"
            app:title="@string/timer_pause" />

    </PreferenceCategory>

</PreferenceScreen>