<?xml version="1.0" encoding="utf-8"?>

<com.woxthebox.draglistview.swipe.ListSwipeItem
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setSwipe"
    app:leftViewId="@+id/setSwipeDelete"
    app:rightViewId="@+id/setSwipeEdit"
    app:swipeViewId="@+id/setSwipeView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/setSwipeDelete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/item_layout"
        android:layout_alignBottom="@+id/item_layout"
        android:background="#ff0000"
        android:gravity="start|center_vertical"
        android:onClick="deleteSwipe"
        android:padding="16dp"
        android:text="@string/Delete"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/setSwipeEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/item_layout"
        android:layout_alignBottom="@+id/item_layout"
        android:background="#0000ff"
        android:gravity="end|center_vertical"
        android:onClick="editSwipe"
        android:padding="16dp"
        android:text="@string/Edit"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/set_swipe_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/swipeSetName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/set_name"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/setTimerCount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/setTimerCountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/timers"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/setIters"
                    app:layout_constraintTop_toTopOf="@+id/setTimerCount" />

                <TextView
                    android:id="@+id/setIters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="x1"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.52" />

                <TextView
                    android:id="@+id/setTotalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/total_time"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/setSwipeTotTime"
                    app:layout_constraintTop_toTopOf="@+id/setSwipeTotTime" />

                <TextView
                    android:id="@+id/setRepTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/rep_time"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/swipeSetName"
                    app:layout_constraintTop_toBottomOf="@+id/swipeSetName" />

                <TextView
                    android:id="@+id/setSwipeRepTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/empty_timer_display"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/setRepTime"
                    app:layout_constraintTop_toTopOf="@+id/setRepTime" />

                <TextView
                    android:id="@+id/setSwipeTotTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_timer_display"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/setTimerCountText"
                    app:layout_constraintTop_toBottomOf="@+id/swipeSetName" />

                <TextView
                    android:id="@+id/setTimerCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/zero_numb"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/swipeSetName"
                    app:layout_constraintEnd_toStartOf="@+id/setTimerCountText"
                    app:layout_constraintTop_toTopOf="@+id/swipeSetName" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</com.woxthebox.draglistview.swipe.ListSwipeItem>
