<?xml version="1.0" encoding="utf-8"?>

<com.woxthebox.draglistview.swipe.ListSwipeItem xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:leftViewId="@+id/swipeDelete"
    app:rightViewId="@+id/swipeEdit"
    app:swipeViewId="@+id/item_layout">

    <TextView
        android:id="@+id/swipeDelete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/item_layout"
        android:layout_alignBottom="@+id/item_layout"
        android:background="#ff0000"
        android:gravity="start|center_vertical"
        android:onClick="deleteSwipe"
        android:padding="16dp"
        android:text="@string/Delete"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/swipeEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/item_layout"
        android:layout_alignBottom="@+id/item_layout"
        android:background="#0000ff"
        android:gravity="end|center_vertical"
        android:onClick="editSwipe"
        android:padding="16dp"
        android:text="@string/Edit"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/timer_swipe_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/swipeTimerClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/empty_timer_display"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/swipeTimerName"
                    app:layout_constraintTop_toBottomOf="@+id/swipeTimerName" />

                <TextView
                    android:id="@+id/swipeTimerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginLeft="37dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/timer_name"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</com.woxthebox.draglistview.swipe.ListSwipeItem>