<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inMin"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintEnd_toStartOf="@+id/inSec"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inWorkoutName"
        app:layout_constraintTop_toBottomOf="@+id/inWorkoutName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inSec"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="@+id/inWorkoutName"
        app:layout_constraintTop_toTopOf="@+id/inMin"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/minLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        app:layout_constraintEnd_toEndOf="@+id/inMin"
        app:layout_constraintStart_toStartOf="@+id/inMin"
        app:layout_constraintTop_toBottomOf="@+id/inMin" />

    <TextView
        android:id="@+id/secLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds"
        app:layout_constraintEnd_toEndOf="@+id/inSec"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/inSec"
        app:layout_constraintTop_toBottomOf="@+id/inSec" />

    <EditText
        android:id="@+id/inWorkoutName"
        android:layout_width="238dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/timer_name"
        android:inputType="textPersonName"
        android:maxLength="32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>